html elements set

--- a/form.html
+++ b/form.html
@@ -1,35 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="cssreset.css">
-        <link rel="stylesheet" href="styles.css">
-        <title></title>
-    </head>
-    <body>
-        <div class="container">
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="form.html">Submit Comments</a></li>
-                    <li><a href="links.html">Links</a></li>
-                    <li><a href="pictures.html">Photos</a></li>
-                </ul>
-            </nav>
-            <div class = formarea>
-                <form method="post" action="submit.html">
-                    <fieldset>
+
+<head>
+    <link rel="stylesheet" href="cssreset.css">
+    <link rel="stylesheet" href="styles.css">
+    <title></title>
+</head>
+
+<body>
+    <div class="container">
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="form.html">Submit Comments</a></li>
+                <li><a href="links.html">Links</a></li>
+                <li><a href="pictures.html">Photos</a></li>
+            </ul>
+        </nav>
+        <div class=formarea>
+            <form method="post" action="submit.html">
+                <fieldset>
+                    <div class="textbox1">
                         <label for="text1" class="label">First Name:</label>
                         <input type="text" id="text1">
+                    </div>
+                    <div class="textbox2">
                         <label for="text2" class="label">Last Name:</label>
                         <input type="text" id="text2">
+                    </div>
+                    <div class="comment">
                         <label for="area" class="label">Comment:</label>
                         <textarea id="area"></textarea>
+                    </div>
+                    <div class="checkbox">
                         <label for="check" class="checklabel">Anonymous Comment</label>
                         <input type="checkbox" id="check">
+                    </div>
+                    <div class="buttonend">
                         <button type="submit" id="submitbutton">Submit</button>
-                    </fieldset>
-                </form>
-            </div>
+                    </div>
+                </fieldset>
+            </form>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
