--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="form.html">Sign up</a></li>
+                <li><a href="form.html">Submit Comments</a></li>
                 <li><a href="links.html">Links</a></li>
                 <li><a href="pictures.html">Photos</a></li>
             </ul>
