--- a/links.html
+++ b/links.html
@@ -6,6 +6,40 @@
         <title></title>
     </head>
     <body>
-
+        <div class="container">
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="form.html">Submit Comments</a></li>
+                    <li><a href="links.html">Links</a></li>
+                    <li><a href="pictures.html">Photos</a></li>
+                </ul>
+            </nav>
+            <div class="linkheader">
+                <h1>Links</h1>
+            </div>
+            <div class="linklists">
+                <div class="unorderedlinklist">
+                    <h2>Social Media</h2>
+                    <ul class="socialmedialinks">
+                        <li><a href="https://facebook.com">Facebook</a></li>
+                        <li><a href="https://twitter.com">Twitter</a></li>
+                        <li><a href="https://instagram.com">Instagram</a></li>
+                        <li><a href="https://pinterest.com">Pinterest</a></li>
+                        <li><a href="https://tiktok.com">Tik Tok</a></li>
+                    </ul>
+                </div>
+                <div class="orderedlinklist">
+                    <h2>Other Links</h2>
+                    <ol class="otherlinks">
+                        <li><a href="https://duckduckgo.com">DuckDuckGo</a></li>
+                        <li><a href="https://google.com">Google</a></li>
+                        <li><a href="https://gmail.com">Gmail</a></li>
+                        <li><a href="https://yahoo.com">Yahoo</a></li>
+                        <li><a href="https://bing.com">Bing</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
