--- a/links.html
+++ b/links.html
@@ -1,45 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="cssreset.css">
-        <link rel="stylesheet" href="styles.css">
-        <title></title>
-    </head>
-    <body>
-        <div class="container">
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="form.html">Submit Comments</a></li>
-                    <li><a href="links.html">Links</a></li>
-                    <li><a href="pictures.html">Photos</a></li>
-                </ul>
-            </nav>
-            <div class="linkheader">
-                <h1>Links</h1>
-            </div>
-            <div class="linklists">
-                <div class="unorderedlinklist">
+
+<head>
+    <link rel="stylesheet" href="cssreset.css">
+    <link rel="stylesheet" href="styles.css">
+    <title></title>
+</head>
+
+<body>
+    <div class="container">
+        <nav class="navbar">
+            <a href="index.html"><img src="logo.png" alt="logo"></a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="form.html">Submit Comments</a></li>
+                <li><a href="links.html">Links</a></li>
+                <li><a href="pictures.html">Photos</a></li>
+            </ul>
+        </nav>
+        <div class="linkheader">
+            <h1 class="actuallinkheader">Links</h1>
+        </div>
+        <div class="linklists">
+            <div class="linklist unorderedlinklist">
+                <div class="linktitle">
                     <h2>Social Media</h2>
-                    <ul class="socialmedialinks">
-                        <li><a href="https://facebook.com">Facebook</a></li>
-                        <li><a href="https://twitter.com">Twitter</a></li>
-                        <li><a href="https://instagram.com">Instagram</a></li>
-                        <li><a href="https://pinterest.com">Pinterest</a></li>
-                        <li><a href="https://tiktok.com">Tik Tok</a></li>
+                </div>
+                <div class="links">
+                    <ul class="actuallinks">
+                        <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+                        <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+                        <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+                        <li><a href="https://pinterest.com" target="_blank">Pinterest</a></li>
+                        <li><a href="https://tiktok.com" target="_blank">Tik Tok</a></li>
                     </ul>
                 </div>
-                <div class="orderedlinklist">
+            </div>
+            <div class="linklist orderedlinklist">
+                <div class="linktitle">
                     <h2>Other Links</h2>
-                    <ol class="otherlinks">
-                        <li><a href="https://duckduckgo.com">DuckDuckGo</a></li>
-                        <li><a href="https://google.com">Google</a></li>
-                        <li><a href="https://gmail.com">Gmail</a></li>
-                        <li><a href="https://yahoo.com">Yahoo</a></li>
-                        <li><a href="https://bing.com">Bing</a></li>
-                    </ul>
+                </div>
+                <div  class="links">
+                    <ol class="actuallinks">
+                        <li><a href="https://duckduckgo.com" target="_blank">DuckDuckGo</a></li>
+                        <li><a href="https://google.com" target="_blank">Google</a></li>
+                        <li><a href="https://gmail.com" target="_blank">Gmail</a></li>
+                        <li><a href="https://yahoo.com" target="_blank">Yahoo</a></li>
+                        <li><a href="https://bing.com" target="_blank">Bing</a></li>
+                    </ol>
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
