--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <nav class="navbar">
+            <a href="index.html"><img src="logo.png" alt="logo"></a>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="form.html">Submit Comments</a></li>
@@ -22,23 +23,23 @@
         </div>
 
         <div class="indeximage">
-            <img src="CbivdLKKTLVsjak9RDT9J5.jpg" alt="desert image">
+            <a href="CbivdLKKTLVsjak9RDT9J5.jpg" target="_blank"><img src="CbivdLKKTLVsjak9RDT9J5.jpg" alt="desert image"></a>
         </div>
 
         <div class="threesections">
-            <div class="section1">
+            <div class="section section1">
                 <h2 id="section1header">Lorem</h2>
                 <p class="paragraphtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                     ullamco laboris</p>
             </div>
-            <div class="section2">
+            <div class="section section2">
                 <h2 id="section2header">Ipsum</h2>
                 <p class="paragraphtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                     ullamco laboris</p>
             </div>
-            <div class="section3">
+            <div class="section section3">
                 <h2 id="section3header">Lorem Ipsum</h2>
                 <p class="paragraphtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
