--- a/pictures.html
+++ b/pictures.html
@@ -1,49 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="cssreset.css">
-        <link rel="stylesheet" href="styles.css">
-        <title></title>
-    </head>
-    <body>
-        <div class="container">
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="form.html">Submit Comments</a></li>
-                    <li><a href="links.html">Links</a></li>
-                    <li><a href="pictures.html">Photos</a></li>
-                </ul>
-            </nav>
-            <div class="picturesheader">
-                <h1>Photos</h1>
+
+<head>
+    <link rel="stylesheet" href="cssreset.css">
+    <link rel="stylesheet" href="styles.css">
+    <title></title>
+</head>
+
+<body>
+    <div class="container">
+        <nav class="navbar">
+            <a href="index.html"><img src="logo.png" alt="logo"></a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="form.html">Submit Comments</a></li>
+                <li><a href="links.html">Links</a></li>
+                <li><a href="pictures.html">Photos</a></li>
+            </ul>
+        </nav>
+        <div class="picturesheader">
+            <h1>Photos</h1>
+        </div>
+        <div class="photogrid">
+            <div class="catdiv cat1pic">
+                <img src="cat1.jpg" alt="small grey and white cat" class="catpic" id="cat1">
+                <label for="cat1" class="catlabel ">Cat One</label>
             </div>
-            <div class="photogrid">
-                <div class="cat1class">
-                <img src="cat1.jpg" alt="small grey and white cat" id="cat1">
-                <label for="cat1">Cat One</label>
-                </div>
-                <div class="cat2class">
-                <img src="cat2.jpg" alt="orange tabby cat" id="cat2">
-                <label for="cat2">Cat Two</label>
-                </div>
-                <div class="cat3class">
-                <img src="cat3.jpg" alt="small brown tabby cat" id="cat3">
-                <label for="cat3">Cat Three</label>
-                </div>
-                <div class="cat4class">
-                <img src="cat4.jpg" alt="serious brown tabby cat" id="cat4">
-                <label for="cat4">Cat Four</label>
-                </div>
-                <div class="cat5class">
-                <img src="cat5.jpg" alt="Large eye cat looking at camera" id="cat5">
-                <label for="cat5">Cat Five</label>
-                </div>
-                <div class="cat6class">
-                <img src="cat6.jpg" alt="sleeping orange tabby" id="cat6">
-                <label for="cat6">Cat Six</label>
-                </div>
+            <div class="catdiv cat2pic">
+                <img src="cat2.jpg" alt="orange tabby cat" class="catpic" id="cat2">
+                <label for="cat2" class="catlabel ">Cat Two</label>
+            </div>
+            <div class="catdiv cat3pic">
+                <img src="cat3.jpg" alt="small brown tabby cat" class="catpic" id="cat3">
+                <label for="cat3" class="catlabel ">Cat Three</label>
+            </div>
+            <div class="catdiv cat4pic">
+                <img src="cat4.jpg" alt="serious brown tabby cat" class="catpic" id="cat4">
+                <label for="cat4" class="catlabel ">Cat Four</label>
+            </div>
+            <div class="catdiv cat5pic">
+                <img src="cat5.jpg" alt="Large eye cat looking at camera" class="catpic" id="cat5">
+                <label for="cat5" class="catlabel ">Cat Five</label>
+            </div>
+            <div class="catdiv cat6pic">
+                <img src="cat6.jpg" alt="sleeping orange tabby" class="catpic" id="cat6">
+                <label for="cat6" class="catlabel ">Cat Six</label>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
